--- a/OpenGLWindow/OpenGLWindow.vcxproj
+++ b/OpenGLWindow/OpenGLWindow.vcxproj
@@ -145,6 +145,9 @@
     <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c" />
     <ClCompile Include="..\proj.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shaderClass.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
