--- a/OpenGLWindow/OpenGLWindow.vcxproj
+++ b/OpenGLWindow/OpenGLWindow.vcxproj
@@ -74,7 +74,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\OpenGL\Include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\haarvie dentu\source\repos\OpenGLWindow\OpenGLWindow;C:\OpenGL\Include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\OpenGL\Libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,10 +143,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c" />
-    <ClCompile Include="..\proj.cpp" />
+    <ClCompile Include="proj.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderClass.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="shader.fs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
