--- a/OpenGLWindow/OpenGLWindow.vcxproj.filters
+++ b/OpenGLWindow/OpenGLWindow.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\proj.cpp">
+    <ClCompile Include="proj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,5 +26,11 @@
     <ClInclude Include="shaderClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="shader.fs" />
   </ItemGroup>
 </Project>
