--- a/OpenGLWindow/OpenGLWindow.vcxproj
+++ b/OpenGLWindow/OpenGLWindow.vcxproj
@@ -144,9 +144,11 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c" />
     <ClCompile Include="proj.cpp" />
+    <ClCompile Include="stb_image_implementation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderClass.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader.vs" />
