--- a/OpenGLWindow/OpenGLWindow.vcxproj.filters
+++ b/OpenGLWindow/OpenGLWindow.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="proj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image_implementation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
