--- a/OpenGLWindow/OpenGLWindow.vcxproj
+++ b/OpenGLWindow/OpenGLWindow.vcxproj
@@ -142,7 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\glad\src\glad.c" />
+    <ClCompile Include="glad.c" />
     <ClCompile Include="proj.cpp" />
     <ClCompile Include="stb_image_implementation.cpp" />
   </ItemGroup>
